# OpenVSP

./: .gitignore  README.md  pyproject.toml  tree.ipynb
G103A/: G103A.vsp3  G103A_CompGeom.csv  G103A_CompGeom.txt  G103A_DegenGeom.csv  G103A_DegenGeom.fem  G103A_DegenGeom.group.1  G103A_DegenGeom.history  G103A_DegenGeom.lod  G103A_DegenGeom.polar  G103A_DegenGeom.slc  G103A_DegenGeom.vspaero  G103A_DegenGeom_trimed.polar  G103A_VSPGeom.polar  test_control_surface.py  test_ground_effect.py  test_sweep.py  test_trimed_polar.py
G103A/airfoil/: E603.csv
G103a/: E603.xlsx  E603_CST.txt  G103A.py  G103A.vsp3  G103A_CompGeom.csv  G103A_CompGeom.txt  G103A_DegenGeom.csv  G103A_DegenGeom.fem  G103A_DegenGeom.flt  G103A_DegenGeom.group.1  G103A_DegenGeom.history  G103A_DegenGeom.lod  G103A_DegenGeom.polar  G103A_DegenGeom.slc  G103A_DegenGeom.vspaero
Tutorial/xsec/: E603.csv  XS_CST_AIRFOIL.vsp3  XS_FILE_AIRFOIL.vsp3  XS_FIVE_DIGIT.vsp3  XS_FOUR_SERIES.vsp3  XS_ONE_SIX_SERIES.vsp3  XS_SIX_SERIES.vsp3  XS_VKT_AIRFOIL.vsp3  set_airfoil.ipynb
examples/models/BRGlider/: BRGlider.csf  sample_plane.xlsx
examples/models/G103A/: G103A.ControlSurfaces.taglist  G103A.csf  G103A.flt  G103A.group.0  G103A.stab  G103A.vsp3  G103A.vsp3.txt  (+6 more)
examples/notebooks/: test_turn_trim.ipynb  vv_gamma_chart_example.ipynb
examples/scripts/: test_control_surface.py  test_ground_effect.py  test_stability_derivatives.py  test_sweep.py  test_trimed_polar.py
src/: AnalysisVSPAERO.py  ISAspecification.py  RollRudderGain.py  TrimTurnSolver.py  TurnTrim.py  VSPAEROStab.py  VVGammaChart.py  util.py
(+34 files in other folders)
